--- a/_posts/2020-06-01-test-post.md
+++ b/_posts/2020-06-01-test-post.md
@@ -6,10 +6,4 @@ categories:
 last_modified_at: 2020-06-01T20:00:00
 ---
 
-This is just a test on how the post works for this theme :D <3 :
- 
-<p>Hello Ricardo</p>
-<p>It's Xiaoxue here. </p>
-<p>I'm doing my baby steps :) </p>
-<iframe src="https://giphy.com/embed/Hs6f36KUBjWww" width="480" height="322" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-<p><a href="https://giphy.com/gifs/naruto-too-lazy-to-put-more-tags-ohhh-well-maybe-ill-edit-later-challenge-Hs6f36KUBjWww">via GIPHY</a></p>
+<h1>LE TEST</h2>
